# SocialRobotics_finalProject_group4

./: .gitignore  README.md  audio_configuration.py  main.py  movements.py  pyproject.toml
src/: audio_confi.py  audio_config.py  camera_vision.py  cards.py  director.py  face_tracking.py  guesser.py  llm.py  main.py  movements.py  prompts.py
src2/: main.py
src_2/: main.py
