[project]
name = "socialrobotics-group4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autobahn>=25.12.2",
    "python-dotenv>=1.2.1",
    "speechrecognition>=3.14.5",
    "twisted>=25.5.0",
    "opencv-python",
    "numpy",
    "matplotlib>=3.10.8",
    "cv>=1.0.0",
    "google>=3.0.0",
    "google-genai>=1.62.0",
    "openai>=2.21.0",
    "alpha-mini-rug>=0.7.3.2",
    "twist>=0.1.0",
    "dotenv>=0.9.9",
]
