[project]
name = "socialrobotics-finalproject-group4-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpha-mini-rug>=0.7.3.2",
    "autobahn>=25.12.2",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.8",
    "openai>=2.24.0",
    "opencv-python>=4.13.0.92",
    "speechrecognition>=3.14.6",
    "twisted>=25.5.0",
]
